--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.30",
         "@fortawesome/free-solid-svg-icons": "^5.14.0",
         "@fortawesome/react-fontawesome": "^0.1.11",
+        "@material-ui/core": "^4.12.3",
         "@mui/icons-material": "^5.0.5",
         "@mui/material": "^5.0.6",
         "@mui/styles": "^5.0.2",
@@ -29,6 +30,7 @@
         "react-dom": "^16.13.1",
         "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.2.2",
+        "react-jss": "^10.8.2",
         "react-login-facebook": "^1.0.3",
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
