--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "classnames": "^2.3.1",
         "codemirror": "^5.57.0",
         "connected-react-router": "^6.9.1",
+        "fetch": "^1.1.0",
         "mongoose": "^6.0.12",
         "react": "^16.13.1",
         "react-bootstrap": "^2.0.2",
@@ -30,6 +31,7 @@
         "react-dom": "^16.13.1",
         "react-facebook-login": "^4.1.1",
         "react-google-login": "^5.2.2",
+        "react-hook-form": "^7.20.5",
         "react-jss": "^10.8.2",
         "react-login-facebook": "^1.0.3",
         "react-redux": "^7.2.6",
