--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "19.0.0",
+        "@ckeditor/ckeditor5-react": "2.1.0",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.30",
@@ -22,7 +24,10 @@
         "classnames": "^2.3.1",
         "codemirror": "^5.57.0",
         "connected-react-router": "^6.9.1",
+        "cross-domain-storage": "2.0.7",
         "fetch": "^1.1.0",
+        "html-react-parser": "^1.4.2",
+        "moment": "^2.29.1",
         "mongoose": "^6.0.12",
         "react": "^16.13.1",
         "react-bootstrap": "^2.0.2",
@@ -41,7 +46,8 @@
         "redux": "^4.1.2",
         "redux-actions": "^2.6.5",
         "redux-saga": "^1.1.3",
-        "toast": "^0.3.47"
+        "toast": "^0.3.47",
+        "web-vitals": "1.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
